Update SCSS source for a little table padding in .Message areas

--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -2334,6 +2334,10 @@ mark {
   max-width: 100%;
 }
 
+.Message td, .Message th {
+  padding: .5em;
+}
+
 /* =============================================================== Categories */
 .ChildCategories {
   border-top: 1px dotted $grey-2;
