--- a/applications/dashboard/scss/src/_analytics.scss
+++ b/applications/dashboard/scss/src/_analytics.scss
@@ -83,7 +83,7 @@
 }
 
 .analytics-panel-metrics {
-  @include full-border(flex, false, true);
+  @include full-border;
   @extend .nav-stats;
   overflow: hidden;
 
@@ -91,8 +91,6 @@
   flex-wrap: wrap;
 
   padding: ($spacer / 2) 0 $spacer;
-  border-top-color: $grey-dark-border;
-  //border-bottom-color: $grey-dark-border;
 
   .metric-value {
     text-align: center;
@@ -108,7 +106,6 @@
 
   .analytics-widget-metric {
     @extend .nav-stats-item;
-    //border-right: $border-width solid $grey-dark-border;
     padding: $spacer ($spacer * 2) !important;
     margin-top: ($spacer / 2);
     min-width: to-rem(180);
