--- a/applications/dashboard/scss/src/_tables.scss
+++ b/applications/dashboard/scss/src/_tables.scss
@@ -572,7 +572,7 @@
       line-height: $line-height-lg;
       border-bottom: $table-border-width solid #ddd;
 
-      &:first-child {
+      .table-summary-cell-main {
         width: 100%;
         min-width: to-rem(120);
       }
