Add a new functionality to disable settings without hiding them
Adds 'foggy' functionality to make elements in a foggy block appear fuzzy and be disabled.

Adds foggy css.

Adds a new jsonTarget method for triggering events: 'Trigger'.

Fixes the disabled state for file-upload.

Implemented in Email Style settings.

--- a/applications/dashboard/scss/src/_forms.scss
+++ b/applications/dashboard/scss/src/_forms.scss
@@ -400,6 +400,11 @@ label,
     margin: 0;
     filter: alpha(opacity = 0);
     opacity: 0;
+
+    &:disabled,
+    &.disabled {
+      opacity: 0;
+    }
   }
 }
 
@@ -432,6 +437,14 @@ label,
     border-color: #66afe9;
     outline: none;
     @extend .active;
+  }
+}
+
+//Disabled state
+.file-upload input:disabled,
+.file-upload input.disabled {
+  ~ .file-upload-choose {
+    background-color: $grey-lighter;
   }
 }
 
